organisation chronologique des confs

--- a/index.html
+++ b/index.html
@@ -31,46 +31,8 @@
 				</section>
 
 				<section>
-					<section>	
-						<h3>
-							Stands
-						</h3>					
-					</section>
-				</section>
-
-				<section>					
-					<section>				
-						<h3>
-							Keynotes	
-						</h3>					
-					</section>
 					<section>
-						<blockquote><h5>
-							Recruteur/Développeur, pour le meilleur et pour le pair
-						</h5></blockquote>
-						<p>Shirley Almosni Chiche & Nathalie Ikedjian</p>
-						<a href="https://youtu.be/sHLG9LXQsAI" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
-					</section>
-					<section>
-						<blockquote><h5>
-							Qu’est ce que tu fais dans la vie ?
-						</h5></blockquote>
-						<p>Cérès Carton</p>
-						<a href="https://youtu.be/mRRobyxdvaE" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
-					</section>
-					<section>
-						<blockquote><h5>
-							Qui veut gagner une carrière de développeur
-						</h5></blockquote>
-						<p>Jean François Garreau & CommitStrip</p>
-						<a href="https://youtu.be/vGO-h9qH0rw" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
-					</section>
-					<section>
-						<blockquote><h5>
-							Comment les logiciels pourrisement ma vie
-						</h5></blockquote>						
-						<p>Antonin Le Mée</p>
-						<a href="https://youtu.be/eJb3xYNcTzw" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
+						<h3>Mercredi</h3>
 					</section>
 				</section>
 
@@ -110,6 +72,32 @@
 						</h5></blockquote>	
 						<img src="images/domain_driven_architecture.png" alt="#NoSlide" class="plain" height="300px" width="450px">
 						<p>Arnaud Lemaire</p>				
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Jeudi</h3>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<blockquote><h5>
+							Recruteur/Développeur, pour le meilleur et pour le pair
+						</h5></blockquote>
+						<p>Shirley Almosni Chiche & Nathalie Ikedjian</p>
+						<a href="https://youtu.be/sHLG9LXQsAI" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
+					</section>				
+				</section>
+
+				<section>
+					<section>
+						<blockquote><h5>
+							Qu’est ce que tu fais dans la vie ?
+						</h5></blockquote>
+						<p>Cérès Carton</p>
+						<a href="https://youtu.be/mRRobyxdvaE" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
 					</section>
 				</section>
 
@@ -226,6 +214,32 @@
 						</h5></blockquote>	
 						<p>Nicolas Pennec</p>
 						<a href="https://docs.google.com/presentation/d/1KBcAav2BhM9DQY5NMq0AOpvgNh9KutKSezmHUT02qK8/pub?slide=id.g21ef080986_0_108" title="Lien slides" ><img src="images/presentation.svg" class="plain" height="48px" width="48px" ></a>		
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<blockquote><h5>
+							Qui veut gagner une carrière de développeur
+						</h5></blockquote>
+						<p>Jean François Garreau & CommitStrip</p>
+						<a href="https://youtu.be/vGO-h9qH0rw" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Vendredi</h3>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<blockquote><h5>
+							Comment les logiciels pourrisement ma vie
+						</h5></blockquote>						
+						<p>Antonin Le Mée</p>
+						<a href="https://youtu.be/eJb3xYNcTzw" title="Lien vidéo" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>
 					</section>
 				</section>
 
