--- a/index.html
+++ b/index.html
@@ -350,6 +350,12 @@
 						<p>Mathieu Gandin</p>							
 					</section>
 				</section>
+
+				<section>					
+					<section>		
+						<h3>Merci !</h3>						
+					</section>
+				</section>
 			</div>
 		</div>
 
