--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 							Kanban from the startup warfare
 						</h5></blockquote>
 						<p>Chéné Youen</p>		
-						<a href="https://drive.google.com/file/d/0B4KTOFlyLP1xVkNqeEdBZHlXUDg/view" title="Lien slides" ><img src="images/video.svg" class="plain" height="48px" width="48px" ></a>		
+						<a href="https://drive.google.com/file/d/0B4KTOFlyLP1xVkNqeEdBZHlXUDg/view" title="Lien slides" ><img src="images/presentation.svg" class="plain" height="48px" width="48px" ></a>		
 					</section>
 				</section>
 
