--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>Restitution BreizhCamp 2017</title>
+		
+		<link rel="icon" href="images/favicon.png" type="image/png">
 
 		<link rel="stylesheet" href="reveal_js/css/reveal.css">
 		<link rel="stylesheet" href="reveal_js/css/theme/sky.css">
